--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     </div>
 
     <nav class="nav-links">
+      <a href="index.html">Home</a>
       <a href="literacy.html">Literacy</a>
       <a href="morality.html">Morality</a>
       <a href="security.html">Security</a>
