--- a/morality.html
+++ b/morality.html
@@ -5,72 +5,14 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
   <title>Ckmillian – Morality</title>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Inter:wght@400;600&display=swap" rel="stylesheet"/>
-  <style>
-    :root {
-      --bg: #f9f6f1;
-      --text: #111;
-      --accent: #d6b260;
-      --accent-soft: #bfa15b;
-      --card: #fff;
-      --shadow: rgba(0,0,0,0.05);
-    }
-    [data-theme="dark"] {
-      --bg: #111;
-      --text: #eee;
-      --accent: #bfa15b;
-      --accent-soft: #d6b260;
-      --card: #1f1f1f;
-      --shadow: rgba(0,0,0,0.3);
-    }
-    *{margin:0;padding:0;box-sizing:border-box;}
-    body{background:var(--bg);color:var(--text);font-family:'Inter',sans-serif;line-height:1.6;}
-    header{background:var(--card);box-shadow:0 1px 4px var(--shadow);display:flex;justify-content:space-between;align-items:center;padding:1rem 2rem;position:relative;}
-    .logo{font-family:'Playfair Display',serif;font-size:1.75rem;color:var(--accent);}
-    .menu-toggle{display:none;flex-direction:column;cursor:pointer;gap:5px;}
-    .menu-toggle span{width:25px;height:3px;background:var(--text);border-radius:2px;transition:all 0.3s;}
-    nav{display:flex;align-items:center;gap:1.5rem;}
-    nav a{text-decoration:none;color:var(--text);font-weight:600;transition:color .2s,border-bottom .2s;}
-    nav a:hover{color:var(--accent);}
-    nav a.active{color:var(--accent);border-bottom:2px solid var(--accent);}
-    .nav-links{display:flex;}
-    @media(max-width:768px){.nav-links{display:none;position:absolute;top:60px;right:0;background:var(--card);flex-direction:column;width:200px;box-shadow:0 2px 6px var(--shadow);} .nav-links a{padding:1rem;border-bottom:1px solid #eee;} .menu-toggle{display:flex;}}
-    .controls{display:flex;align-items:center;gap:1rem;}
-    select{padding:.4rem;border:1px solid #d1d5db;border-radius:4px;background:var(--card);color:var(--text);}
-    .switch{position:relative;width:40px;height:20px;}
-    .switch input{display:none;}
-    .slider{position:absolute;inset:0;background:#d1d5db;border-radius:9999px;cursor:pointer;transition:background .3s;}
-    .slider:before{content:'';position:absolute;width:16px;height:16px;top:2px;left:2px;background:#fff;border-radius:50%;transition:transform .3s;}
-    input:checked+.slider{background:var(--accent-soft);}
-    input:checked+.slider:before{transform:translateX(20px);}
-    .hero{background:var(--card);text-align:center;padding:6rem 1rem;}
-    .hero h1{font-family:'Playfair Display',serif;font-size:clamp(2rem,5vw,3rem);color:var(--accent);margin-bottom:1rem;}
-    .hero p{font-size:clamp(1rem,2.5vw,1.125rem);color:var(--text);}
-    .about,.steps,.grid,.auth{max-width:1024px;margin:auto;padding:2rem 1rem;}
-    .about h2{font-family:'Playfair Display',serif;font-size:2rem;color:var(--accent);margin-bottom:1rem;text-align:center;}
-    .about p{text-align:center;}
-    .steps{display:grid;grid-template-columns:repeat(auto-fit,minmax(280px,1fr));gap:1.5rem;}
-    .step{background:var(--card);box-shadow:0 2px 6px var(--shadow);border-radius:8px;padding:1.5rem;transition:transform .2s;}
-    .step:hover{transform:translateY(-4px);}
-    .step h3{font-family:'Playfair Display',serif;font-size:1.25rem;color:var(--accent);margin-bottom:.75rem;}
-    .step p{font-style:italic;color:var(--accent-soft);}
-    .grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(300px,1fr));gap:1.5rem;text-align:center;}
-    section{background:var(--card);box-shadow:0 2px 6px var(--shadow);border-radius:8px;padding:1.75rem;transition:transform .2s;}
-    section:hover{transform:translateY(-4px);}
-    section h2{font-family:'Playfair Display',serif;font-size:1.5rem;color:var(--accent);margin-bottom:.5rem;}
-    section p{margin-bottom:1rem;}
-    .btn{display:inline-block;padding:.6rem 1.2rem;background:var(--accent);color:#fff;border-radius:6px;text-decoration:none;font-weight:600;transition:background .3s;}
-    .btn:hover{background:var(--accent-soft);}
-    .auth{text-align:center;}
-    .auth input{margin:.4rem;padding:.6rem;width:100%;max-width:260px;border:1px solid #d1d5db;border-radius:6px;}
-    .auth button{margin:.5rem;padding:.6rem 1.2rem;background:var(--accent);color:#fff;border:none;border-radius:6px;cursor:pointer;transition:background .3s;}
-    .auth button:hover{background:var(--accent-soft);}
-    footer{text-align:center;padding:2rem 1rem;background:var(--card);box-shadow:0 -1px 4px var(--shadow);}
-  </style>
+
+  <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
   <header>
-    <div class="logo"><a href="index.html">Ckmillian</a></div>
-    <div class="menu-toggle" id="menuToggle" aria-label="Toggle navigation"><span></span><span></span><span></span></div>
+    <div class="logo">Ckmillian</div>
+    <div class="menu-toggle" id="menuToggle"><span></span><span></span><span></span></div>
     <nav class="nav-links">
       <a href="literacy.html">Literacy</a>
       <a href="morality.html" class="active">Morality</a>
@@ -78,48 +20,43 @@
       <a href="resources.html">Resources</a>
     </nav>
     <div class="controls">
-      <select aria-label="Language">
+      <select>
         <option>English</option><option>Español</option><option>Français</option><option>العربية</option>
       </select>
-      <label class="switch" aria-label="Toggle light/dark theme">
-        <input type="checkbox" id="themeSwitch"/>
-        <span class="slider"></span>
-      </label>
+      <label class="switch"><input type="checkbox" id="themeSwitch"/><span class="slider"></span></label>
     </div>
   </header>
 
   <div class="hero">
-    <h1>Morality & Ethics</h1>
-    <p>“Ethical decisions in tech shape the future of AI and hacking practices.”</p>
+    <h1>Morality in Tech</h1>
+    <p>“With great knowledge comes great responsibility — even in hacking and AI.”</p>
   </div>
 
   <div class="about">
-    <h2>Ethical Hacking Philosophy</h2>
-    <p>We introduce ethical hacking as a tool to learn, discover, and secure systems responsibly. Understanding right vs wrong in digital exploration is crucial for building trustworthy tech.</p>
+    <h2>Why Morality Matters</h2>
+    <p>Technology is powerful, but the way we use it defines its impact. From AI development to hacking, morality ensures progress without harm.</p>
   </div>
 
   <div class="steps">
     <div class="step">
-      <h3>Learn with Integrity</h3>
-      <p>Practice hacking in controlled environments and follow laws and ethical guidelines.</p>
+      <h3>Ethical Hacking</h3>
+      <p>Learning security to protect systems, not exploit them. White-hat over black-hat.</p>
     </div>
     <div class="step">
-      <h3>Analyze Morally</h3>
-      <p>Evaluate consequences before testing systems and respect privacy.</p>
+      <h3>Choices in AI</h3>
+      <p>Philosophy guides how we handle AGI and ensure it benefits society.</p>
     </div>
     <div class="step">
-      <h3>Apply Philosophy</h3>
-      <p>Reflect on decisions with principles from technology ethics and digital philosophy.</p>
+      <h3>Case Studies</h3>
+      <p>Stories of hackers who used skills to save millions instead of causing chaos.</p>
     </div>
   </div>
 
   <section class="grid">
-    <h2>Quick Guides</h2>
-    <p>Explore more on ethical hacking, digital morality, and safe AI interactions.</p>
-    <a href="literacy.html" class="btn">Explore Literacy</a>
-    <a href="morality.html" class="btn">Explore Morality</a>
-    <a href="security.html" class="btn">Explore Security</a>
-    <a href="resources.html" class="btn">Explore Resources</a>
+    <h2>Guides</h2>
+    <p>Learn how morality influences decisions in coding, AI, and security.</p>
+    <a href="literacy.html" class="btn">Back to Literacy</a>
+    <a href="security.html" class="btn">Go to Security</a>
   </section>
 
   <div class="auth">
@@ -127,4 +64,17 @@
     <input type="email" placeholder="Email Address"/>
     <input type="password" placeholder="Password"/>
     <div>
-      <button
+      <button onclick="loginUser()">Login</button>
+      <button onclick="signupUser()">Sign Up</button>
+    </div>
+  </div>
+
+  <footer>
+    <p>&copy; 2025 Ckmillian</p>
+    <p>Designed by Mudde Carl Maximillian Kintu</p>
+  </footer>
+
+  <script src="script.js"></script>
+
+</body>
+</html>
