--- a/morality.html
+++ b/morality.html
@@ -14,6 +14,7 @@
     <div class="logo">Ckmillian</div>
     <div class="menu-toggle" id="menuToggle"><span></span><span></span><span></span></div>
     <nav class="nav-links">
+      <a href="index.html">Home</a>
       <a href="literacy.html">Literacy</a>
       <a href="morality.html" class="active">Morality</a>
       <a href="security.html">Security</a>
