--- a/literacy.html
+++ b/literacy.html
@@ -14,6 +14,7 @@
     <div class="logo">Ckmillian</div>
     <div class="menu-toggle" id="menuToggle" aria-label="Toggle navigation"><span></span><span></span><span></span></div>
     <nav class="nav-links">
+      <a href="index.html">Home</a>
       <a href="literacy.html" class="active">Literacy</a>
       <a href="morality.html">Morality</a>
       <a href="security.html">Security</a>
