--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     </div>
 
     <nav class="nav-links">
+      <a href="index.html" class="active">Home</a>
       <a href="literacy.html">Literacy</a>
       <a href="morality.html">Morality</a>
       <a href="security.html">Security</a>
