--- a/security.html
+++ b/security.html
@@ -21,15 +21,18 @@
       <div class="menu-toggle">&#9776;</div>
     </nav>
     <div class="controls">
-      <select id="lang-toggle" aria-label="Language">
-        <option value="en">English</option>
-        <option value="fr">Français</option>
-        <option value="sw">Swahili</option>
-        <option value="lg">Luganda</option>
-        <option value="es">Español</option>
-        <option value="ja">日本語</option>
-        <option value="zh">中文</option>
-      </select>
+      
+  <select id="lang-toggle">
+  <option value="en">English</option>
+  <option value="fr">Français</option>
+  <option value="sw">Swahili</option>
+  <option value="lg">Luganda</option>
+  <option value="es">Español</option>
+  <option value="ja">日本語</option>
+  <option value="zh">中文</option>
+  <option value="ar">العربية</option>
+</select>
+      
       <label class="switch">
         <input type="checkbox" id="theme-toggle"/>
         <span class="slider"></span>
