--- a/resources.html
+++ b/resources.html
@@ -26,10 +26,18 @@
     </nav>
 
     <div class="controls">
-      <select id="langSelect" aria-label="Language selector">
-        <option value="en">English</option>
-        <option value="es">Español</option>
-      </select>
+      
+<select id="lang-toggle">
+  <option value="en">English</option>
+  <option value="fr">Français</option>
+  <option value="sw">Swahili</option>
+  <option value="lg">Luganda</option>
+  <option value="es">Español</option>
+  <option value="ja">日本語</option>
+  <option value="zh">中文</option>
+  <option value="ar">العربية</option>
+</select>
+
 
       <label class="switch" aria-label="Toggle light/dark theme">
         <input type="checkbox" id="themeSwitch"/>
