--- a/literacy.html
+++ b/literacy.html
@@ -21,9 +21,17 @@
       <a href="resources.html">Resources</a>
     </nav>
     <div class="controls">
-      <select aria-label="Language">
-        <option>English</option><option>Español</option><option>Français</option><option>العربية</option>
-      </select>
+ <select id="lang-toggle">
+  <option value="en">English</option>
+  <option value="fr">Français</option>
+  <option value="sw">Swahili</option>
+  <option value="lg">Luganda</option>
+  <option value="es">Español</option>
+  <option value="ja">日本語</option>
+  <option value="zh">中文</option>
+  <option value="ar">العربية</option>
+</select>
+
       <label class="switch" aria-label="Toggle light/dark theme">
         <input type="checkbox" id="themeSwitch"/>
         <span class="slider"></span>
