--- a/security.html
+++ b/security.html
@@ -10,7 +10,7 @@
 <body>
   <header>
     <div class="logo">Ckmillian</div>
-    <nav>
+    <nav class="nav-links" aria-label="Main navigation">
       <ul>
         <li><a href="index.html" data-translate="title">Home</a></li>
         <li><a href="literacy.html" data-translate="literacy">Literacy</a></li>
