--- a/security.html
+++ b/security.html
@@ -11,13 +11,12 @@
   <header>
     <div class="logo">Ckmillian</div>
     <nav class="nav-links" aria-label="Main navigation">
-      <ul>
-        <li><a href="index.html" data-translate="title">Home</a></li>
-        <li><a href="literacy.html" data-translate="literacy">Literacy</a></li>
-        <li><a href="morality.html" data-translate="morality">Morality</a></li>
-        <li><a href="security.html" class="active" data-translate="security">Security</a></li>
-        <li><a href="resources.html" data-translate="resources">Resources</a></li>
-      </ul>
+        <a href="index.html" data-translate="title">Home</a>
+        <a href="literacy.html" data-translate="literacy">Literacy</a>
+        <a href="morality.html" data-translate="morality">Morality</a>
+        <a href="security.html" class="active" data-translate="security">Security</a>
+        <a href="resources.html" data-translate="resources">Resources</a>
+     
       <div class="menu-toggle">&#9776;</div>
     </nav>
     <div class="controls">
